# strawberry

./: .env.example  Cargo.toml  Dockerfile  railway.json
.github/workflows/: publish.yml
src/: main.rs
